--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "type-fest": "^3.4.0"
   },
   "devDependencies": {
+    "@botpress/api": "0.3.1",
+    "@tsconfig/node18-strictest": "^1.0.0",
+    "@types/node": "^22.10.2",
     "esbuild": "^0.16.12",
-    "@botpress/api": "0.3.1"
+    "ts-node": "^10.9.2"
   }
 }
